# WeirdGunGameCalc-cr

./: .gitignore  Cargo.toml  Makefile  ParseSheet.cr  ParseSheet.py  README.md  build.zig  go.mod  shard.yml
.github/workflows/: ci.yml  update-data.yml
Data/: FullData.json  FullData.sqlite3
cmd/calculator/: main.go
docs/: Cargo.toml  README.md  app.js  index.html  style.css
docs/src/: app.js  engine.js  lib.rs  styles.css
docs/tests/: engine.test.mjs
internal/calc/: engine.go  engine_test.go  options.go
internal/data/: load.go
internal/model/: types.go
spec/: sheet_parser_spec.cr  spec_helper.cr  sqlite_parser_spec.cr  wggcalc_spec.cr
src/: calculator.rs  data.rs  engine.zig  lib.rs  lib.zig  main.cr  main.rs  main.zig  model.zig  parser.rs  parser.zig  presenter.rs  sheet_parser.cr  sheet_parser.rs  wggcalc.cr
tests/: test_parsesheet.py
