[package]
name = "wggcalc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
csv = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
